added js. have to finish logocarousel and add php

--- a/index.html
+++ b/index.html
@@ -316,62 +316,14 @@
 
       </div>
       <div class="logobox">
-          <div class="carousel-slide"></div>
-        <!-- <a href="#" class="logotype">
-          <img src="img/LR.png" class="logotype-img">
-        </a> -->
-        <!-- <a href="#" class="logotype">
-          <img src="img/LVM.png" class="logotype-img">
-        </a>
-        <a href="#" class="logotype">
-          <img src="img/Gibson.png" class="logotype-img">
-        </a>
-        <a href="#" class="logotype">
-          <img src="img/BB.png" class="logotype-img">
-        </a>
-        <a href="#" class="logotype">
-          <img src="img/BSF.png" class="logotype-img">
-        </a>
-        <a href="#" class="logotype">
-          <img src="img/SFR.png" class="logotype-img">
-        </a>
-        <a href="#" class="logotype">
-          <img src="img/casamona.png" class="logotype-img">
-        </a>
-        <a href="#" class="logotype">
-          <img src="img/BR.png" class="logotype-img">
-        </a>
-        <a href="#" class="logotype">
-          <img src="img/LVC.png" class="logotype-img">
-        </a>
-        <a href="#" class="logotype">
-          <img src="img/Latvenergo.png" class="logotype-img">
-        </a>
-        <a href="#" class="logotype">
-          <img src="img/filterline.png" class="logotype-img">
-        </a>
-        <a href="#" class="logotype">
-          <img src="img/lmt.png" class="logotype-img">
-        </a>
-        <a href="#" class="logotype">
-          <img src="img/ventspils.png" class="logotype-img">
-        </a>
-        <a href="#" class="logotype">
-          <img src="img/ventbunkers.png" class="logotype-img">
-        </a>
-        <a href="#" class="logotype">
-          <img src="img/latio.png" class="logotype-img">
-        </a>
-        <a href="#" class="logotype">
-          <img src="img/vpp.png" class="logotype-img">
-        </a>
-        <a class="none">
-          <img src="img/none.png" class="none-img">
-        </a> -->
-
-
-
-
+          <div class="carousel-slide" id="carousel-slide">
+              <div class="logo-carousel_left-arrow">
+                  <img src="img/left_bullet.png" />
+              </div>
+              <div class="logo-carousel_right-arrow">
+                  <img src="img/right_bullet.png" />
+              </div>
+          </div>
       </div>
     </div>
   </div>
@@ -421,10 +373,11 @@
   </div>
   </div>
   </div>
-  <script type="text/javascript" src="scroll.js"></script>
+  <script type="text/javascript" src="js/scroll.js"></script>
   <!-- <script type="text/javascript" src="right.js"></script> -->
-  <script type="text/javascript" src="carousel.js"></script>
-  <script type="text/javascript" src="validation.js"></script>
-  <script type="text/javascript" src="lognav.js"></script>
-  <script type="text/javascript" src="filtr.js"></script>
+  <script type="text/javascript" src="js/carousel.js"></script>
+  <script type="text/javascript" src="js/validation.js"></script>
+  <script type="text/javascript" src="js/filtr.js"></script>
+  <script type="text/javascript" src="js/lognav.js"></script>
+  <script type="text/javascript" src="js/logocarousel.js"></script>
  </body>
